# gr-osmosdr

./: .gitignore  CMakeLists.txt  README
apps/: osmocom_spectrum_sense
cmake/Modules/: FindGnuradioFuncube.cmake  FindGnuradioIIO.cmake  FindIIO.cmake  FindUHD.cmake
grc/: gen_osmosdr_blocks.py
include/osmosdr/: sink.h  source.h
lib/: CMakeLists.txt  config.h.in  device.cc  source_impl.h
lib/airspy/: airspy_source_c.h
lib/airspyhf/: airspyhf_source_c.h
lib/bladerf/: bladerf_common.cc  bladerf_common.h  bladerf_sink_c.h  bladerf_source_c.h
lib/fcd/: CMakeLists.txt  fcd_source_c.cc  fcd_source_c.h
lib/file/: file_sink_c.h  file_source_c.h
lib/freesrp/: freesrp_sink_c.h  freesrp_source_c.h
lib/hackrf/: CMakeLists.txt  hackrf_common.cc  hackrf_common.h  hackrf_sink_c.cc  hackrf_sink_c.h  hackrf_source_c.cc  hackrf_source_c.h
lib/miri/: miri_source_c.h
lib/osmosdr/: osmosdr_src_c.h
lib/plutosdr/: CMakeLists.txt  plutosdr_source_c.cc  plutosdr_source_c.h
lib/redpitaya/: redpitaya_sink_c.h  redpitaya_source_c.h
lib/rfspace/: rfspace_source_c.h
lib/rtl/: rtl_source_c.h
lib/rtl_tcp/: rtl_tcp_source_c.h  rtl_tcp_source_f.h
lib/sdrplay/: sdrplay_source_c.h
lib/soapy/: soapy_sink_c.h  soapy_source_c.cc  soapy_source_c.h
lib/uhd/: uhd_sink_c.h  uhd_source_c.h
python/: CMakeLists.txt  __init__.py
python/bindings/: CMakeLists.txt  bind_oot_file.py  device_python.cc  python_bindings.cc  ranges_python.cc  sink_python.cc  source_python.cc  time_spec_python.cc
python/bindings/docstrings/: device_pydoc_template.h  ranges_pydoc_template.h  sink_pydoc_template.h  source_pydoc_template.h  time_spec_pydoc_template.h
swig/: CMakeLists.txt  osmosdr_swig.i
